Fixed: wflow-consoleweb - Form Builder - Adjust css to fix form element button is covered by the element itself.   @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/fbuilder.css
+++ b/wflow-consoleweb/src/main/webapp/css/fbuilder.css
@@ -65,7 +65,7 @@
     font-size: 7px;
     background: none;
     width: 100%;
-    z-index: 100;
+    z-index: 200;
 }
 .form-section .form-palette-options {
     top: 2px;
